# keryx-miner-unified

./: .gitignore  CREDITS.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  build-linux.sh  build-windows.bat  build.rs  devplan.md  plan.md  start-mining-mac.sh  system.md
.github/workflows/: build-android.yml  build-apple.yml  ci.yaml  deploy.yaml
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/keryx/miner/android/: MainActivity.kt  MinerBridge.kt
inference/: Cargo.toml
inference/src/: ai_payload.rs  lib.rs  synthetic.rs
integrations/hiveos/: h-manifest.conf
ios-app/: Info.plist  project.yml
ios-app/Sources/: Bridge.h  ContentView.swift  keryx_iosApp.swift
keryx-vulkan/: Cargo.toml  build.rs
keryx-vulkan/examples/: bench_pom_walk.rs
keryx-vulkan/shaders/: khh.comp  pom_fetch.comp  pom_walk.comp  pom_walk_i32.comp  pom_walk_ilp4.comp  pom_walk_magic.comp  pom_walk_prefix.comp  pom_walk_wave32.comp
keryx-vulkan/src/: bench.rs  khh.rs  lib.rs  pom_walk.rs
keryx-vulkan/tests/: bda_limits.rs  khh.rs  pom_walk.rs
launcher/: Cargo.toml
launcher/src/: main.rs
metal/: pom_mine.metal
plugins/cuda/: Cargo.toml
plugins/cuda/resources/: keryx-cuda-sm80.ptx  keryx-cuda-sm89.ptx
plugins/cuda/src/: worker.rs
plugins/opencl/: Cargo.toml
plugins/opencl/resources/: keryx-opencl.cl
plugins/opencl/src/: worker.rs
proto/: rpc.proto
src/: android.rs  cli.rs  device.rs  inference_engine.rs  ios.rs  ipfs.rs  keryxd_messages.rs  lib.rs  llm_engine.rs  main.rs  miner.rs  models.rs  pom.rs  pom_gpu.rs  pom_gpu_backends.rs  pom_gpu_metal.rs  pom_gpu_vulkan.rs  pom_gpu_vulkan_desktop.rs  pow.rs  quantized_qwen3_moe_split.rs  slm.rs  statum_codec.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
src/pow/: heavy_hash.rs
