[package]
name = "keryxcuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keryx-miner = {path = "../../"}
log = "0.4"
rand = "0.8"
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
cust = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
overclock = [ "nvml-wrapper" ]
